syntax = "proto3";

package chat.v1;

option go_package = "github.com/mibi2007/familytree/familytree_go/proto/chat/v1";

import "google/protobuf/timestamp.proto";

service ChatService {
  rpc SendMessage(SendMessageRequest) returns (Message);
  rpc StreamMessages(StreamMessagesRequest) returns (stream Message);
  rpc ListMessages(ListMessagesRequest) returns (ListMessagesResponse);
}

message Message {
  string id = 1;
  string family_id = 2;
  string sender_id = 3;
  string content = 4;
  google.protobuf.Timestamp created_at = 5;
  MessageType type = 6;
}

enum MessageType {
  MESSAGE_TYPE_UNSPECIFIED = 0;
  MESSAGE_TYPE_TEXT = 1;
  MESSAGE_TYPE_SYSTEM = 2;
  MESSAGE_TYPE_AI = 3;
}

message SendMessageRequest {
  string family_id = 1;
  string content = 2;
  MessageType type = 3;
}

message StreamMessagesRequest {
  string family_id = 1;
}

message ListMessagesRequest {
  string family_id = 1;
  int32 limit = 2;
  string before_id = 3;
}

message ListMessagesResponse {
  repeated Message messages = 1;
}
